# ros2-practice

./: .gitmodules  Dockerfile  build.sh  run.sh  stop.sh
ros2_ws/src/cpp_parameters/: CMakeLists.txt  package.xml
ros2_ws/src/cpp_parameters/launch/: cpp_parameters_launch.py
ros2_ws/src/cpp_parameters/src/: cpp_parameters_node.cpp
ros2_ws/src/my_package/: CMakeLists.txt  package.xml
ros2_ws/src/my_package/src/: add_two_ints_client.cpp  add_two_ints_server.cpp  publish_address_book.cpp  publisher_member_function.cpp  subscriber_member_function.cpp  test_pub.cpp  test_service_client.cpp  test_service_server.cpp  test_sub.cpp
ros2_ws/src/polygon_base/: CMakeLists.txt  package.xml
ros2_ws/src/polygon_base/include/polygon_base/: regular_polygon.hpp
ros2_ws/src/polygon_base/src/: area_node.cpp
ros2_ws/src/polygon_plugins/: package.xml
ros2_ws/src/polygon_plugins/src/: polygon_plugins.cpp
ros2_ws/src/py_pubsub/: package.xml  setup.py
ros2_ws/src/py_pubsub/py_pubsub/: publisher_member_function.py  subscriber_member_function.py
